--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "nyc --require babel-core/register mocha",
+    "lint": "eslint ./",
     "nyc-report": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "prepublish": "babel src --out-dir dist"
   },
@@ -38,7 +39,15 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "codecov": "^1.0.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^2.5.3",
     "nyc": "^7.1.0"
+  },
+  "dependencies": {
+    "eslint": "^3.19.0"
   }
 }
