--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "types": "./index.d.ts",
   "scripts": {
     "test": "npm run lint && nyc --require babel-core/register mocha",
-    "lint": "eslint ./",
+    "format": "prettier --write '{src,test,benchmark}/**/*.js'",
+    "lint": "prettier-check '{src,test,benchmark}/**/*.js'",
     "nyc-report": "nyc report --reporter=lcov > coverage.lcov && codecov",
+    "precommit": "lint-staged",
     "prepublish": "babel src --out-dir dist"
+  },
+  "lint-staged": {
+    "{src,test,benchmark}/**/*.js": ["prettier --write", "git add"]
   },
   "repository": {
     "type": "git",
@@ -40,14 +45,12 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "codecov": "^1.0.1",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "mocha": "^2.5.3",
-    "nyc": "^7.1.0"
+    "nyc": "^7.1.0",
+    "prettier": "^1.9.1",
+    "prettier-check": "^2.0.0"
   },
   "dependencies": {}
 }
