--- a/package.json
+++ b/package.json
@@ -55,5 +55,7 @@
     "prettier": "^1.9.1",
     "prettier-check": "^2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "unicode-astral-regex": "^1.0.0"
+  }
 }
