--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "dist/index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "test": "npm run lint && nyc --require babel-core/register mocha",
-    "format": "prettier --write '{src,test,benchmark}/**/*.js'",
-    "lint": "prettier-check '{src,test,benchmark}/**/*.js'",
+    "test": "jest --coverage",
+    "test2": "npm run lint && nyc --require babel-core/register mocha",
+    "format": "prettier --write '{src,test,benchmark}/**/*.{js,ts}'",
+    "lint": "prettier-check '{src,test,benchmark}/**/*.{js,ts}'",
     "nyc-report": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "precommit": "lint-staged",
-    "prepublish": "babel src --out-dir dist"
+    "prepublish": "npm run build",
+    "build": "tsc"
   },
   "lint-staged": {
-    "{src,test,benchmark}/**/*.js": [
+    "{src,test,benchmark}/**/*.{js,ts}": [
       "prettier --write",
       "git add"
     ]
@@ -43,17 +45,22 @@
   },
   "homepage": "https://github.com/sallar/stringz#readme",
   "devDependencies": {
+    "@types/assert": "^1.4.2",
+    "@types/jest": "^24.0.13",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.26.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "codecov": "^1.0.1",
     "husky": "^0.14.3",
+    "jest": "^24.8.0",
     "lint-staged": "^6.0.0",
     "mocha": "^2.5.3",
     "nyc": "^7.1.0",
     "prettier": "^1.9.1",
-    "prettier-check": "^2.0.0"
+    "prettier-check": "^2.0.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "unicode-astral-regex": "^1.0.1"
