--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist/index.d.ts",
     "dist/index.d.ts.map"
   ],
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "format": "prettier --write '{src,test,benchmark}/**/*.{js,ts}'",
