--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "stringz",
   "version": "2.1.0",
   "description": "Zero-dependency unicode-aware string tools",
-  "main": "dist/index.js",
+  "type": "module",
   "files": [
     "dist/index.js",
     "dist/index.d.ts",
     "dist/index.d.ts.map"
   ],
-  "types": "dist/index.d.ts",
+  "exports": {
+    "default": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
-    "test": "jest --coverage",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "format": "prettier --write '{src,test,benchmark}/**/*.{js,ts}'",
     "lint": "prettier-check '{src,test,benchmark}/**/*.{js,ts}'",
     "nyc-report": "codecov",
@@ -52,15 +57,16 @@
     "@types/assert": "^1.4.2",
     "@types/jest": "^24.0.13",
     "codecov": "^3.5.0",
+    "cross-env": "^7.0.3",
     "husky": "^2.3.0",
-    "jest": "^24.8.0",
+    "jest": "^28.1.3",
     "lint-staged": "^8.1.7",
-    "prettier": "^1.9.1",
+    "prettier": "^2.7.1",
     "prettier-check": "^2.0.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5"
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "char-regex": "^1.0.2"
+    "split-chars": "^4.0.0"
   }
 }
